[metadata]
name = vault-cli
description = CLI tool for hashicorp vault
version = 0.3.3
author = ylachiver
author_email = yann.lachiver@people-doc.com
url = https://github.com/peopledoc/vault-cli
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hashicorp vault cli
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests
    Click
    pyyaml
    backports.functools_lru_cache; python_version<"3.2"

[options.entry_points]
console_scripts =
    vault = vault_cli.cli:main

[options.extras_require]
hvac =
    hvac

dev =
    twine

test =
    pytest
    pytest-mock
    requests-mock
    pytest-cov
    pytest-click

[bdist_wheel]
universal = 1


[tool:pytest]
addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
