[metadata]
name = vault-cli
description = CLI tool for hashicorp vault
version = 0.12.0.dev0
author = PeopleDoc
author_email = joachim.jablon@people-doc.com
url = https://github.com/peopledoc/vault-cli
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hashicorp vault cli
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests
    Click>=7.0
    pyyaml
    jinja2
    hvac

[options.entry_points]
console_scripts =
    vault = vault_cli.cli:main

[options.extras_require]

# If you plan to import the testing module
testing =
    pytest

dev =
    twine
    black
    isort

test =
    pytest
    pytest-mock
    requests-mock
    pytest-cov
    pytest-click

lint =
    mypy
    flake8
    black
    isort

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
not_skip = __init__.py


[tool:pytest]
addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv


[mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*,pytest.*]
ignore_missing_imports = True


[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[coverage:report]
exclude_lines =
    raise NotImplementedError
