[metadata]
name = vault-cli
description = CLI tool for hashicorp vault
author = PeopleDoc
author_email = joachim.jablon@people-doc.com
url = https://github.com/peopledoc/vault-cli
long_description = file: README.rst
keywords = hashicorp vault cli
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests
    Click>=7.0
    pyyaml>=5.3.1
    jinja2
    hvac<0.10.12  # Temporary fix for #191

[options.entry_points]
console_scripts =
    vault-cli = vault_cli.cli:main
    vault = vault_cli.cli:main

[options.extras_require]

# If you plan to import the testing module
testing =
    pytest

dev =
    tox
    twine
    black
    isort
    build

test =
    pytest
    pytest-mock
    requests-mock
    pytest-cov
    pytest-click

lint =
    mypy
    flake8
    black
    isort
    types-PyYAML
    types-requests
    types-setuptools
    types-toml

docs =
    doc8
    sphinx
    sphinx_autodoc_typehints
    sphinxcontrib-programoutput

docs_spelling =
    sphinxcontrib-spelling

[isort]
profile = black

[tool:pytest]
addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
testpaths =
    tests/unit
    tests/integration
junit_family=xunit2

[mypy-backports.functools_lru_cache.*,setuptools.*,pytest.*]
ignore_missing_imports = True

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[coverage:report]
exclude_lines =
    raise NotImplementedError

[doc8]
max-line-length=88
ignore-path=docs/_build
